[package]
name = "shadow-peer"
version = "0.1.0"
authors = ["劉安 <liuan@sgcc.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.5", features = ["unstable"] }
byteorder = "1.3.4"
futures = "0.3.6"
futures-timer = "3.0.2"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
thiserror = "1.0.21"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 20
panic = 'abort'
overflow-checks = false
