[package]
name = "shadow-peer"
version = "0.1.2"
authors = ["劉安 <liuan@sgcc.com.cn>"]
edition = "2018"
license = "GPL-3.0"
description = "A reverse port proxy, allow peers connect to you who are behind the NAT / firewall via this shadow peer."
documentation = "https://github.com/SuperHacker-liuan/shadow-peer"
homepage = "https://github.com/SuperHacker-liuan/shadow-peer"
repository = "https://github.com/SuperHacker-liuan/shadow-peer"
categories = ["network-programming", "asynchronous"]
keywords = ["frp", "proxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "client",
    "server",
]

[dependencies]
async-std = { version = "1.7.0", features = ["unstable"] }
byteorder = "1.3.4"
futures = "0.3.8"
futures-timer = "3.0.2"
log = "0.4.11"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.22"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 20
panic = 'abort'
overflow-checks = false
