[package]
name = "shadow-peer-client"
version = "0.1.0"
authors = ["劉安 <liuan@sgcc.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
clap = "2.33.3"
toml = "0.5.6"
shadow-peer = { path = ".." }
