[package]
name = "shadow-peer-server"
version = "0.1.0"
authors = ["劉安 <liuan@sgcc.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
async-std = { version = "1.6.5", features = ["attributes"] }
clap = "2.33.3"
daemonize = "0.4.1"
once_cell = "1.4.1"
serde = "1.0.116"
toml = "0.5.6"
shadow-peer = { path = ".." }
